welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: ')' expected but $XMLSTART$< found.
  	if (d <h){
              ^Diagonal:23: error: illegal start of simple expression
  }
  ^